WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132643
Fix build errors for BlobDataItem after
r168391
https://bugs.webkit.org/show_bug.cgi?id=132643
Summary
Fix build errors for BlobDataItem after r168391
Praveen Jadhav
Reported
2014-05-06 23:29:19 PDT
Build fails for EFL port after including patch from
Bug 132628
.
Attachments
Patch
(2.89 KB, patch)
2014-05-06 23:48 PDT
,
Praveen Jadhav
cgarcia
: review-
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.32 KB, patch)
2014-05-07 00:39 PDT
,
Praveen Jadhav
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Praveen Jadhav
Comment 1
2014-05-06 23:48:30 PDT
Created
attachment 230974
[details]
Patch Patch
WebKit Commit Bot
Comment 2
2014-05-06 23:50:28 PDT
Attachment 230974
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:783: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:792: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:793: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:794: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 4 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3
2014-05-07 00:02:00 PDT
Comment on
attachment 230974
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230974&action=review
> Source/WebCore/ChangeLog:6 > + Build error fix.
This doesn't provide any useful information, since the summary already says Fix build errors ...
> Source/WebCore/ChangeLog:10 > + No new tests. No change in behaviour.
You should remove this, commit-queue will refuse to commit this if this line is present in the changelog.
> Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:783 > soup_message_body_append(message->request_body, SOUP_MEMORY_TEMPORARY, > - blobItem.data->data() + blobItem.offset, blobItem.length); > + blobItem.data->data() + blobItem.offset(), blobItem.length());
Even if this was already using the old coding style, we can take advantage we are changing it now to use the new coding style, please fix it.
> Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:794 > - blobItem.path, > - blobItem.offset, > - blobItem.length == BlobDataItem::toEndOfFile ? 0 : blobItem.length, > + blobItem.file->path(), > + blobItem.offset(), > + blobItem.length() == BlobDataItem::toEndOfFile ? 0 : blobItem.length(),
Ditto.
Praveen Jadhav
Comment 4
2014-05-07 00:39:57 PDT
Created
attachment 230975
[details]
Patch All comments are considered.
Carlos Garcia Campos
Comment 5
2014-05-07 00:44:24 PDT
Comment on
attachment 230975
[details]
Patch Thanks!
Csaba Osztrogonác
Comment 6
2014-05-07 00:56:40 PDT
Comment on
attachment 230975
[details]
Patch Clearing flags on attachment: 230975 Committed
r168413
: <
http://trac.webkit.org/changeset/168413
>
Csaba Osztrogonác
Comment 7
2014-05-07 00:56:51 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 8
2014-05-07 09:35:22 PDT
Sorry about the breakage, and thank you for the fix!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug